Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2046,7 +2046,7 @@
    "source": [
     "area_values = None\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': }"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
