--- a/index.ipynb
+++ b/index.ipynb
@@ -1127,7 +1127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = list(dic)\n",
+    "text_values = list()\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
