--- a/index.ipynb
+++ b/index.ipynb
@@ -1139,7 +1139,7 @@
     }
    ],
    "source": [
-    "text_values = cities[0:4]['City'\n",
+    "text_values = \n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
