--- a/index.ipynb
+++ b/index.ipynb
@@ -1139,7 +1139,7 @@
     }
    ],
    "source": [
-    "text_values = list(Cities[0]['City'], Cities[1]['City'], Cities[2]['City'])\n",
+    "text_values = list(cities[0]['City'], cities[1]['City'], Cities[2]['City'])\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
