--- a/index.ipynb
+++ b/index.ipynb
@@ -2044,7 +2044,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values = {}\n",
+    "area_values = {cities[0]['{}']}\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
