Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1127,7 +1127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = {cities[0]['City'], cities[1]['City'], cities[2]['City']}\n",
+    "text_values = none\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
